src/tests/ui/struct/init-unknown-field.vif
fn main() void {
    const Fruit = struct {
        size: i32
    };

    const apple: Fruit = .{
        .size = 1,
        .weight = 1,
    };
}

//@ args: build
//@ stderr:
// error: field `weight` does not exist in type `Fruit`
//   --> src/tests/ui/struct/init-unknown-field.vif:8:10
//   |
// 8 |         .weight = 1,
//   |          ^^^^^^
//
